# finance

./: .coveragerc  .env.acc  .env.example  .env.prod  .gitignore  Makefile  README.md  config.disabled  config.ini  config.yaml  config_test.yaml  deploy.disabled  deploy.sh  finance_data_to_influx.py  makefile  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml  setup-prod.sh
db/: cleanup.sh  create_testuser.sh  create_user.sh  env.sh  setup.sql
finance/: __init__.py  __main__.py  main.py
finance/common/: freshness.py  paths.py
finance/composites/: deps.py  engine.py  evaluator.py
finance/config/: loader.py
finance/fetch/: base.py  controller.py  ecb.py  fred.py  parser.py  provider.py  yahoo.py
finance/state/: manager.py
finance/tools/: add_license.py
finance/write/: __init__.py  controller.py  influx.py  metric_writer.py  ssl_context_adapter.py
ops/: config.yaml  test_connectivity.py
scripts/: bump_version.sh  deploy.sh  init_env.sh  install_systemd.sh
src/finance/: __init__.py  __main__.py  main.py  main_utils.py
systemd/: finance-fetch.service  finance-fetch.timer
tests/: conftest.py  test_common_freshness.py  test_common_paths.py  test_composites_deps.py  test_composites_evaluator.py  test_config_loader.py  test_fetch_controller.py  test_fetch_ecb.py  test_fetch_fred.py  test_fetch_yahoo.py  test_main.py  test_main_run.py  test_main_utils.py  test_state_manager.py  test_tools_add_license.py  test_write_controller.py  test_write_influx.py
tests/common/: test_applogger.py  test_freshness.py  (+8 more)
tools/: add_license.py
(+104 files in other folders)
