[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "finance"
version = "0.1.3"
description = "Finance tools"
authors = [{ name = "Rik Essenius" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "python-dotenv",
    "requests",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tools*", "tests*"]

[project.optional-dependencies]
dev = [
    "coverage",
    "iniconfig",
    "packaging",
    "pip-tools",
    "pluggy",
    "Pygments",
    "pytest",
    "pytest-cov",
    "ruff"
]

