# Copyright 2026 Rik Essenius
# Licensed under the Apache License, Version 2.0. See the LICENSE file for details.
# File: pyproject.toml

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "finance"
version = "0.2.18"
description = "Finance tools"
authors = [{ name = "Rik Essenius" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "python-dotenv",
    "requests",
    "PyYAML",
    "psycopg[binary]",
    "python-dateutil",
]

[tool.setuptools.packages.find]
where = ["src"]
#exclude = ["tools*", "tests*"]

[project.optional-dependencies]
dev = [
    "coverage",
    "iniconfig",
    "packaging",
    "pip-tools",
    "pluggy",
    "Pygments",
    "pytest",
    "pytest-cov",
    "ruff"
]

#[tool.setuptools.dynamic]
#version = { attr = "finance.__version__" }
